--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -12,3 +12,5 @@ jwt.refresh_token.invalid=유효한 리프레시 토큰이 아닙니다.
 
 oauth2.provider.invalid=지원하지 않는 소셜 타입입니다.
 oauth2.login.failed=로그인에 실패했습니다.
+
+validation.not_blank=필수 입력 항목입니다.
