refactor: 응답 객체 관련 데이터 포맷 수정
request param, request body의 validation 처리가 가능하도록 수정하고,
에러 응답에도 에러 코드를 추가해서 상황에 맞게 처리할 수 있도록 변경한다.

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,10 +1,6 @@
 # global error
 test=테스트
 
-unauthorized=인증에 실패했습니다.
-forbidden=권한이 없습니다.
-error=서버 오류가 발생했습니다.
-
 jwt.access_token.not_found=리프레시 토큰을 찾지 못했습니다.
 jwt.access_token.invalid=유효한 엑세스 토큰이 아닙니다.
 jwt.refresh_token.not_found=리프레시 토큰을 찾지 못했습니다.
@@ -13,4 +9,15 @@ jwt.refresh_token.invalid=유효한 리프레시 토큰이 아닙니다.
 oauth2.provider.invalid=지원하지 않는 소셜 타입입니다.
 oauth2.login.failed=로그인에 실패했습니다.
 
-validation.not_blank=필수 입력 항목입니다.
+## error
+error.401=인증에 실패했습니다.
+error.403=권한이 없습니다.
+error.500=서버 오류가 발생했습니다.
+
+## validation
+validation.NotNull=필수 입력 항목입니다.
+validation.NotEmpty=필수 입력 항목입니다.
+validation.NotBlank=필수 입력 항목입니다.
+validation.Range={0}~{1} 범위 내 숫자만 입력 가능합니다.
+validation.EnumConstraint=유효한 값이 아닙니다.
+validation.typeMismatch=올바른 데이터 타입이 아닙니다.
