--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -6,7 +6,8 @@ jwt.access_token.invalid=유효한 엑세스 토큰이 아닙니다.
 jwt.refresh_token.not_found=리프레시 토큰을 찾지 못했습니다.
 jwt.refresh_token.invalid=유효한 리프레시 토큰이 아닙니다.
 
-oauth2.provider.invalid=지원하지 않는 소셜 타입입니다.
+oauth2.invalid.provider=지원하지 않는 소셜 타입입니다.
+oauth2.invalid.authorization_code=유효한 인가 코드가 아닙니다.
 oauth2.login.failed=로그인에 실패했습니다.
 
 ## error
