--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,6 +1,12 @@
 # global error
 test=테스트
 
+## response
+ok=성공
+unauthorized=인증에 실패했습니다.
+forbidden=권한이 없습니다.
+internal_server_error=서버 오류가 발생했습니다.
+
 jwt.access_token.not_found=리프레시 토큰을 찾지 못했습니다.
 jwt.access_token.invalid=유효한 엑세스 토큰이 아닙니다.
 jwt.refresh_token.not_found=리프레시 토큰을 찾지 못했습니다.
@@ -10,10 +16,11 @@ oauth2.invalid.provider=지원하지 않는 소셜 타입입니다.
 oauth2.invalid.authorization_code=유효한 인가 코드가 아닙니다.
 oauth2.login.failed=로그인에 실패했습니다.
 
-## error
-error.401=인증에 실패했습니다.
-error.403=권한이 없습니다.
-error.500=서버 오류가 발생했습니다.
+member.not_found=찾을 수 없는 회원입니다.
+
+account.exists=이미 장부를 보유중입니다.
+account.delete=장부가 삭제되었습니다.
+account.not_found=존재하지 않는 장부입니다.
 
 ## validation
 validation.NotNull=필수 입력 항목입니다.
