--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -22,6 +22,7 @@ account.exists=이미 장부를 보유중입니다.
 account.delete=장부가 삭제되었습니다.
 account.not_found=존재하지 않는 장부입니다.
 
+category.exists=이미 사용중인 카테고리입니다.
 category.delete=카테고리가 삭제되었습니다.
 category.not_found=존재하지 않는 카테고리입니다.
 
