--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -26,10 +26,13 @@ category.exists=이미 사용중인 카테고리입니다.
 category.delete=카테고리가 삭제되었습니다.
 category.not_found=존재하지 않는 카테고리입니다.
 
+transaction.invalid_range_date=검색 시작일이 종료일보다 클 수 없습니다.
+
 ## validation
 validation.NotNull=필수 입력 항목입니다.
 validation.NotEmpty=필수 입력 항목입니다.
 validation.NotBlank=필수 입력 항목입니다.
 validation.Range={0}~{1} 범위 내 숫자만 입력 가능합니다.
-validation.EnumConstraint=유효한 값이 아닙니다.
 validation.typeMismatch=올바른 데이터 타입이 아닙니다.
+validation.EnumConstraint=유효한 값이 아닙니다.
+validation.DateConstraint=날짜 포맷이 올바르지 않습니다.(yyyyMMdd)
